1.5/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: main
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
        ports:
        - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: multitool-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool-b
  template:
    metadata:
      labels:
        app: multitool-b
    spec:
      containers:
        - image: wbitt/network-multitool
          imagePullPolicy: IfNotPresent
          name: network-multitool

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
    - name: web-f
      port: 80
  selector:
    app: main

---

apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
    - name: web-b
      port: 80
  selector:
    app: multitool-b
